# paleta-rs

./: Cargo.toml  README.md
src/: lib.rs  palettes.rs
